Update to application

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -11,7 +11,7 @@
 <ion-content>
 <ion-row class="header">
   <ion-col col-12 text-center text-capitalize>
-    <h1 class="lead" text-center>Profile</h1>
+    <h1 class="lead" text-center>John Smith</h1>
   </ion-col>
 
   <ion-col col-12 text-center>
@@ -30,12 +30,12 @@
     </button>
   </ion-col>
 </ion-row>
-
+<!--
 <ion-row>
   <ion-col col-12 text-center>
     <h3 class="name">John Smith</h3>
   </ion-col>
-</ion-row>
+</ion-row>-->
 
 <ion-row>
   <ion-col col-4 text-center no-padding class="stat-heading">
