Update to application

--- a/src/pages/forum/forum.html
+++ b/src/pages/forum/forum.html
@@ -7,8 +7,11 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <ion-col col-12 text-center text-capitalize>
+<ion-content>
+  <ion-title col-12 text-center text-capitalize>
     <h1 class="lead">Forum</h1>
-  </ion-col>
+  </ion-title>
+  <ion-row>
+    <profile-wall col-12></profile-wall>
+  </ion-row>
 </ion-content>
