--- a/src/pages/pathway/pathway.html
+++ b/src/pages/pathway/pathway.html
@@ -13,90 +13,93 @@
   </ion-title>
   <ion-item-group>
     <ion-item-divider color="primary" text-uppercase text-center>Business Development</ion-item-divider>
-    <ion-list-header text-center text-uppercase>OFFICE</ion-list-header>
-    <ion-item>
+    <ion-list-header text-center text-uppercase>
+      <h2><em>OFFICE</em></h2>
+    </ion-list-header>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       Starfleet headquarters History at the cabin that is when vital planets tremble.
+      <progress-bar [progress]="loadProgress"></progress-bar>
     </ion-item>
-    <ion-item>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       The nanomachine is more hur'q now than girl. cloudy and finally real.
     </ion-item>
-    <ion-item>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       The sensor is more spacecraft now than cosmonaut. photonic and technically small.
     </ion-item>
-    <ion-item>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       The nanomachine is more captain now than planet. chemical and accelerative lunar.
     </ion-item>
-    <ion-item>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       The green people is more space suit now than crew. gravimetric and bravely solid.
     </ion-item>
-    <ion-list-header text-center text-uppercase>STAFFING</ion-list-header>
-    <ion-item>
+    <ion-list-header text-center text-uppercase><h2><em>STAFFING</em></h2></ion-list-header>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       Starfleet headquarters History at the cabin that is when vital planets tremble.
     </ion-item>
-    <ion-item>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       The nanomachine is more hur'q now than girl. cloudy and finally real.
     </ion-item>
-    <ion-item>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       The sensor is more spacecraft now than cosmonaut. photonic and technically small.
     </ion-item>
-    <ion-item>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       The nanomachine is more captain now than planet. chemical and accelerative lunar.
     </ion-item>
-    <ion-item>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       The green people is more space suit now than crew. gravimetric and bravely solid.
     </ion-item>
   </ion-item-group>
   <ion-item-group>
     <ion-item-divider color="primary" text-uppercase text-center>Marketing</ion-item-divider>
-    <ion-list-header text-center text-uppercase>OFFICE</ion-list-header>
-    <ion-item>
+    <ion-list-header text-center text-uppercase><h2><em>OFFICE</em></h2></ion-list-header>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       Starfleet headquarters History at the cabin that is when vital planets tremble.
     </ion-item>
-    <ion-item>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       The nanomachine is more hur'q now than girl. cloudy and finally real.
     </ion-item>
-    <ion-item>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       The sensor is more spacecraft now than cosmonaut. photonic and technically small.
     </ion-item>
-    <ion-item>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       The nanomachine is more captain now than planet. chemical and accelerative lunar.
     </ion-item>
-    <ion-item>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       The green people is more space suit now than crew. gravimetric and bravely solid.
     </ion-item>
-    <ion-list-header text-center text-uppercase>STAFFING</ion-list-header>
-    <ion-item>
+    <ion-list-header text-center text-uppercase><h2><em>STAFFING</em></h2></ion-list-header>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       Starfleet headquarters History at the cabin that is when vital planets tremble.
     </ion-item>
-    <ion-item>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       The nanomachine is more hur'q now than girl. cloudy and finally real.
     </ion-item>
-    <ion-item>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       The sensor is more spacecraft now than cosmonaut. photonic and technically small.
     </ion-item>
-    <ion-item>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       The nanomachine is more captain now than planet. chemical and accelerative lunar.
     </ion-item>
-    <ion-item>
+    <ion-item text-wrap>
       <ion-icon class="fa fa-file-audio-o fa-xl" item-start></ion-icon>
       The green people is more space suit now than crew. gravimetric and bravely solid.
     </ion-item>
